data/derived/sp14/progs/unify/prog4530.ml.out
Characters 171-175:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type unit list
       Type 'a * 'b is not compatible with type unit 
